# ray_tracing

./: .gitignore  CMakeLists.txt  base.h  basic_object.cpp  basic_object.h  bezier.cpp  bezier.h  bounding.cpp  bounding.h  convex_hull.cpp  convex_hull.h  geometry.cpp  geometry.h  gmath.cpp  gmath.h  light.cpp  light.h  main.cpp  mesh.cpp  mesh.h  newton.cpp  newton.h  object.cpp  object.h  scene.cpp  scene.h  texture.cpp  texture.h
